--- a/test1.html
+++ b/test1.html
@@ -20,12 +20,12 @@
     <section class="header-bottom">
       <nav class="nav-menu">
         <ul class="menu-list">
-          <li class="menu-item"><a href="#">HOME</a></li>
-          <li class="menu-item"><a href="#">ABOUT US</a></li>
-          <li class="menu-item"><a href="#">HEALTH SERVICES</a></li>
-          <li class="menu-item"><a href="#">REGULAR MEDICINE</a></li>
-          <li class="menu-item"><a href="#">SET CALENDAR</a></li>
-          <li class="menu-item"><a href="#">CONSULT & CONTACT</a></li>
+          <li class="menu-item"><a href="#">Home</a></li>
+          <li class="menu-item"><a href="#">About Us</a></li>
+          <li class="menu-item"><a href="#">Health Services</a></li>
+          <li class="menu-item"><a href="#">Rerular Medicine</a></li>
+          <li class="menu-item"><a href="#">Set Calendar</a></li>
+          <li class="menu-item"><a href="#">Consult & Contact</a></li>
         </ul>
       </nav>
       <div>
@@ -39,15 +39,15 @@
   </header>
   <main class="page-main">
     <section class="breadcrumbs">
-      <a href="#"><img src="#banner"></a>
-      <ul>
-        <li>Home/</li>
-        <li>Health Service</li>
+      <a href="#"><img src="#banner" alt="banner"></a>
+      <ul class="breadcrumb-list">
+        <li class="breadcrumb-item">Home/</li>
+        <li class="breadcrumb-item">Health Service</li>
       </ul>
     </section>
     <aside class="sidebar-left">
       <article class="category">
-        <h4>ADULTS</h4>
+        <h3>ADULTS</h3>
         <ul class="adult-list">
           <li class="adult-item"><a href="#">Neck-shoulder-hand pain</a></li>
           <li class="adult-item"><a href="#">Spinal pain</a></li>
@@ -59,7 +59,7 @@
           <li class="adult-item"><a href="#">Sequelae of stroke</a></li>
           <li class="adult-item"><a href="#">Traumatic sequelae</a></li>
         </ul>
-        <h4>CHILDREN</h4>
+        <h3>CHILDREN</h3>
       </article>
       <article class="form-book">
         <h3>BOOK SCHEDULE</h3>
@@ -76,13 +76,13 @@
       <ul class="service-list">
         <li class="service-item">
           <a href="#"><img src="images/picture1.jpg" alt="Service Image"></a>
-          <h3><a href="">Neck shoulder pain</a></h3>
+          <h3><a href="#">Neck shoulder pain</a></h3>
           <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
           <a href="#"></a>
         </li>
         <li class="#service-item">
-          <a href=""><img src="images/picture2.jpg" alt="Service Image"></a>
-          <h3><a href="">Neck shoulder pain</a></h3>
+          <a href="#"><img src="images/picture2.jpg" alt="Service Image"></a>
+          <h3><a href="#">Neck shoulder pain</a></h3>
           <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
           <a href="#"></a>
         </li>
@@ -132,7 +132,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <section class="footer-info">
+    <article class="footer-info">
       <ul class="info-list">
         <h3>ABOUT US</h3>
         <li class="info-item">GENERAL INTRODUCTION</li>
@@ -151,11 +151,11 @@
         <li class="info-item"><img src="#" alt="G+">GOOGLE+</li>
         <li class="info-item"><img src="#" alt="youtube">YOUTUBE</li>
       </ul>
-    </section>
-    <section class="footer-copyright">
+    </article>
+    <article class="footer-copyright">
       <p>&copy;2018-COPYRIGHT OF SPECIALIZED CLINC</p>
       <p>DESIGNoBY<a href="#">DD.COM</a></p>  
-    </section>
+    </article>
   </footer>
 </body>
 </html>
