--- a/test1.html
+++ b/test1.html
@@ -10,7 +10,7 @@
     <section class="header-top">
       <div class="page-logo">
         <a href="#"><img src="#"></a>
-        <h1>SPECIALIZED CLINIC</h1>
+        <h1>Specialized Clinic</h1>
         <span>Physiotherapy - Rehabilitatic</span>
       </div>
       <div class="contact">
@@ -46,31 +46,33 @@
       </ul>
     </section>
     <aside class="sidebar-left">
-      <article class="category">
-        <h3>ADULTS</h3>
-        <ul class="adult-list">
-          <li class="adult-item"><a href="#">Neck-shoulder-hand pain</a></li>
-          <li class="adult-item"><a href="#">Spinal pain</a></li>
-          <li class="adult-item"><a href="#">Disc herniation</a></li>
-          <li class="adult-item"><a href="#">Knee joint, hip joint</a></li>
-          <li class="adult-item"><a href="#">Footsore</a></li>
-          <li class="adult-item"><a href="#">Diseases of the muscles</a></li>
-          <li class="adult-item"><a href="#">Peripheral neurophathy</a></li>
-          <li class="adult-item"><a href="#">Sequelae of stroke</a></li>
-          <li class="adult-item"><a href="#">Traumatic sequelae</a></li>
-        </ul>
-        <h3>CHILDREN</h3>
-      </article>
-      <article class="form-book">
-        <h3>BOOK SCHEDULE</h3>
-        <form action="#" method="post">
-          <input type="text" name="fullname" placeholder="Full Name"><br>
-          <input type="text" name="address" placeholder="Address"><br>
-          <input type="phone" name="phone" placeholder="Phone number"><br>
-          <input type="datetime" name="time" placeholder="Time"><br>
-          <button type="submit">Send</button>
-        </form>
-      </article>
+      <ul class="aside-content">
+        <li class="category">
+          <h3>ADULTS</h3>
+          <ul class="adult-list">
+            <li class="adult-item"><a href="#">Neck-shoulder-hand pain</a></li>
+            <li class="adult-item"><a href="#">Spinal pain</a></li>
+            <li class="adult-item"><a href="#">Disc herniation</a></li>
+            <li class="adult-item"><a href="#">Knee joint, hip joint</a></li>
+            <li class="adult-item"><a href="#">Footsore</a></li>
+            <li class="adult-item"><a href="#">Diseases of the muscles</a></li>
+            <li class="adult-item"><a href="#">Peripheral neurophathy</a></li>
+            <li class="adult-item"><a href="#">Sequelae of stroke</a></li>
+            <li class="adult-item"><a href="#">Traumatic sequelae</a></li>
+          </ul>
+          <h3>CHILDREN</h3>
+        </li>
+        <li class="form-book">
+          <h3>Book Schedule</h3>
+          <form action="#" method="post">
+            <input type="text" name="fullname" placeholder="Full Name"><br>
+            <input type="text" name="address" placeholder="Address"><br>
+            <input type="phone" name="phone" placeholder="Phone number"><br>
+            <input type="datetime" name="time" placeholder="Time"><br>
+            <button type="submit">Send</button>
+          </form>
+        </li>
+      </ul>
     </aside>
     <section class="service-content">
       <ul class="service-list">
@@ -80,7 +82,7 @@
           <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
           <a href="#"></a>
         </li>
-        <li class="#service-item">
+        <li class="service-item">
           <a href="#"><img src="images/picture2.jpg" alt="Service Image"></a>
           <h3><a href="#">Neck shoulder pain</a></h3>
           <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
@@ -132,30 +134,29 @@
     </section>
   </main>
   <footer class="page-footer">
-    <article class="footer-info">
+    <div class="footer-info">
       <ul class="info-list">
-        <h3>ABOUT US</h3>
-        <li class="info-item">GENERAL INTRODUCTION</li>
-        <li class="info-item">HUMAN</li>
-        <li class="info-item">FACILITIES AND FACILITIES</li>
+        <h3>About Us</h3>
+        <li class="info-item">General Introduction</li>
+        <li class="info-item">Human</li>
+        <li class="info-item">Facilities And Facilities</li>
       </ul>
       <ul class="info-list">
-        <h3>SUPPORT</h3>
-        <li class="info-item">HEALTH COUNSNELING</li>
-        <li class="info-item">REGULAR MEDICINE</li>
-        <li class="info-item">SCHEDULE APPOINTMENTS</li>
+        <h3>Support</h3>
+        <li class="info-item">Health Counsneling</li>
+        <li class="info-item">Regular Medicine</li>
+        <li class="info-item">Schedule Appointments</li>
       </ul>
       <ul class="info-list">
-        <h3>SOCIAL CONNECTION</h3>
-        <li class="info-item"><img src="#" alt="facebook">FACEBOOK</li>
-        <li class="info-item"><img src="#" alt="G+">GOOGLE+</li>
-        <li class="info-item"><img src="#" alt="youtube">YOUTUBE</li>
+        <h3>Social Connection</h3>
+        <li class="info-item"><img src="#" alt="facebook">Facebook</li>
+        <li class="info-item"><img src="#" alt="G+">Google+</li>
+        <li class="info-item"><img src="#" alt="youtube">Youtube</li>
       </ul>
-    </article>
-    <article class="footer-copyright">
-      <p>&copy;2018-COPYRIGHT OF SPECIALIZED CLINC</p>
-      <p>DESIGNoBY<a href="#">DD.COM</a></p>  
-    </article>
+    </div>
+    <div class="footer-copyright">
+      <p>&copy;2018-Copyright Of Specialized Clinc</p>
+    </div>
   </footer>
 </body>
 </html>
