--- a/test1.html
+++ b/test1.html
@@ -9,12 +9,14 @@
   <header class="page-header">
     <section class="header-top">
       <div class="page-logo">
-        <a href="#"><img src="#"></a>
-        <h1>Specialized Clinic</h1>
-        <span>Physiotherapy - Rehabilitatic</span>
+        <a href="#">
+          <img src="">
+          <h1>Specialized Clinic</h1>
+          <span>Physiotherapy - Rehabilitatic</span>
+        </a>
       </div>
       <div class="contact">
-        <img src="#"> Question for the doctor? <span>05113941 977</span>
+        <img src="">Question for the doctor? <span>05113941 977</span>
       </div>
     </section>  
     <section class="header-bottom">
@@ -30,18 +32,18 @@
       </nav>
       <div>
         <ul class="social-list">
-          <li class="social-item"><a href=""><img src="#icoFB" alt="FB"></a></li>
-          <li class="social-item"><a href=""><img src="#icoGoogle" alt="G+"></a></li>
-          <li class="social-item"><a href=""><img src="#icoYoutube" alt="Youtube"></a></li>
+          <li class="social-item"><a href="#"><img src="images/icoFB" alt="FB"></a></li>
+          <li class="social-item"><a href="#"><img src="images/icoGoogle" alt="G+"></a></li>
+          <li class="social-item"><a href="#"><img src="images/icoYoutube" alt="Youtube"></a></li>
         </ul>
       </div>
     </section>
   </header>
   <main class="page-main">
     <section class="breadcrumbs">
-      <a href="#"><img src="#banner" alt="banner"></a>
+      <a href="#"><img src="images/banner" alt="banner"></a>
       <ul class="breadcrumb-list">
-        <li class="breadcrumb-item">Home/</li>
+        <li class="breadcrumb-item"><a href="#">Home</a>/</li>
         <li class="breadcrumb-item">Health Service</li>
       </ul>
     </section>
@@ -149,9 +151,9 @@
       </ul>
       <ul class="info-list">
         <h3>Social Connection</h3>
-        <li class="info-item"><img src="#" alt="facebook">Facebook</li>
-        <li class="info-item"><img src="#" alt="G+">Google+</li>
-        <li class="info-item"><img src="#" alt="youtube">Youtube</li>
+        <li class="info-item"><img src="" alt="facebook">Facebook</li>
+        <li class="info-item"><img src="" alt="G+">Google+</li>
+        <li class="info-item"><img src="" alt="youtube">Youtube</li>
       </ul>
     </div>
     <div class="footer-copyright">
