--- a/css-test/html1.html
+++ b/css-test/html1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSS-TEST</title>
+	<title>CSS-TESTv2</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css-test/styles/css-test.css">
 </head>
