--- a/test1.html
+++ b/test1.html
@@ -3,161 +3,193 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="./styles/main.css">
+
   <title>HTML Test </title>
 </head>
 <body>
-  <header class="page-header">
-    <section class="header-top">
+  <header class="page-header clearfix">
+    <section class="header-top vt-center clearfix">
       <div class="page-logo">
         <a href="#">
-          <img src="">
-          <h1>Specialized Clinic</h1>
-          <span>Physiotherapy - Rehabilitatic</span>
+          <img src="images/logo.jpg">
+          <div class="title-logo">
+            <h1>Specialized Clinic</h1>
+            <span>Physiotherapy - Rehabilitatic</span>
+          </div>
         </a>
       </div>
-      <div class="contact">
-        <img src="">Question for the doctor? <span>05113941 977</span>
+      <div class="contact italic">
+        <img src="images/icon_phone.png">Question for the doctor? <span class="phone">05113941 977</span>
       </div>
     </section>  
-    <section class="header-bottom">
-      <nav class="nav-menu">
-        <ul class="menu-list">
-          <li class="menu-item"><a href="#">Home</a></li>
-          <li class="menu-item"><a href="#">About Us</a></li>
-          <li class="menu-item"><a href="#">Health Services</a></li>
-          <li class="menu-item"><a href="#">Rerular Medicine</a></li>
-          <li class="menu-item"><a href="#">Set Calendar</a></li>
-          <li class="menu-item"><a href="#">Consult & Contact</a></li>
-        </ul>
-      </nav>
-      <div>
-        <ul class="social-list">
-          <li class="social-item"><a href="#"><img src="images/icoFB" alt="FB"></a></li>
-          <li class="social-item"><a href="#"><img src="images/icoGoogle" alt="G+"></a></li>
-          <li class="social-item"><a href="#"><img src="images/icoYoutube" alt="Youtube"></a></li>
-        </ul>
+    <section class="header-bottom clearfix">
+      <div class="vt-center clearfix">
+        <nav id="mobile_menu"><img src="images/Menu.png"></nav>
+        <nav id="nav_menu" class="nav-menu clearfix">
+          <ul class="menu-list clearfix">
+            <li class="menu-item"><a href="#">Home </a></li>
+            <li class="menu-item"><a href="#">About Us</a></li>
+            <li class="menu-item"><a href="#">Health Services</a></li>
+            <li class="menu-item"><a href="#">Rerular Medicine</a></li>
+            <li class="menu-item"><a href="#">Set Calendar</a></li>
+            <li class="menu-item"><a href="#">Consult & Contact</a></li>
+          </ul>
+        </nav>
+        <div class="header-social">
+          <ul class="social-list">
+            <li class="social-item"><a href="#"><img src="images/if_fb.png" alt="FB"></a></li>
+            <li class="social-item"><a href="#"><img src="images/if_google.png" alt="G+"></a></li>
+            <li class="social-item"><a href="#"><img src="images/if_youtube.png" alt="Youtube"></a></li>
+          </ul>
+        </div>
       </div>
     </section>
   </header>
-  <main class="page-main">
-    <section class="breadcrumbs">
-      <a href="#"><img src="images/banner" alt="banner"></a>
-      <ul class="breadcrumb-list">
-        <li class="breadcrumb-item"><a href="#">Home</a>/</li>
+  <main class="page-main clearfix">
+    <section class="breadcrumbs clearfix">
+      <ul class="breadcrumb-list vt-center">
+        <li class="breadcrumb-item"><a href="#">Home </a>/ </li>
         <li class="breadcrumb-item">Health Service</li>
       </ul>
     </section>
-    <aside class="sidebar-left">
-      <ul class="aside-content">
-        <li class="category">
-          <h3>Adults</h3>
-          <ul class="adult-list">
-            <li class="adult-item"><a href="#">Neck-shoulder-hand pain</a></li>
-            <li class="adult-item"><a href="#">Spinal pain</a></li>
-            <li class="adult-item"><a href="#">Disc herniation</a></li>
-            <li class="adult-item"><a href="#">Knee joint, hip joint</a></li>
-            <li class="adult-item"><a href="#">Footsore</a></li>
-            <li class="adult-item"><a href="#">Diseases of the muscles</a></li>
-            <li class="adult-item"><a href="#">Peripheral neurophathy</a></li>
-            <li class="adult-item"><a href="#">Sequelae of stroke</a></li>
-            <li class="adult-item"><a href="#">Traumatic sequelae</a></li>
-          </ul>
-          <h3>Children</h3>
-        </li>
-        <li class="form-book">
-          <h3>Book Schedule</h3>
-          <form action="#" method="post">
-            <input type="text" name="fullname" placeholder="Full Name"><br>
-            <input type="text" name="address" placeholder="Address"><br>
-            <input type="phone" name="phone" placeholder="Phone number"><br>
-            <input type="datetime" name="time" placeholder="Time"><br>
-            <button type="submit">Send</button>
-          </form>
-        </li>
-      </ul>
-    </aside>
-    <section class="service-content">
-      <ul class="service-list">
-        <li class="service-item">
-          <a href="#"><img src="images/picture1.jpg" alt="Service Image"></a>
-          <h3><a href="#">Neck shoulder pain</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture2.jpg" alt="Service Image"></a>
-          <h3><a href="#">Neck shoulder pain</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture3.jpg" alt="Service Image"></a>
-          <h3><a href="#">Neck shoulder pain</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture4.jpg" alt="Service Image"></a>
-          <h3><a href="#">Neck shoulder pain</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture5.jpg" alt="Service Image"></a>
-          <h3><a href="#">Slow say</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture6.jpg" alt="Service Image"></a>
-          <h3><a href="#">Slow say</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture7.jpg" alt="Service Image"></a>
-          <h3><a href="#">Slow say</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture8.jpg" alt="Service Image"></a>
-          <h3><a href="#">Neck shoulder pain</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-        <li class="service-item">
-          <a href="#"><img src="images/picture9.jpg" alt="Service Image"></a>
-          <h3><a href="#">Neck shoulder pain</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-          <a href="#"></a>
-        </li>
-      </ul>
+    <section class="main-content vt-center clearfix">
+      <aside class="sidebar-left">
+        <ul class="aside-content">
+          <li class="category">
+            <h3>Adults</h3>
+            <ul class="adult-list">
+              <li class="adult-item"><a href="#">Neck-shoulder-hand pain</a></li>
+              <li class="adult-item"><a href="#">Spinal pain</a></li>
+              <li class="adult-item"><a href="#">Disc herniation</a></li>
+              <li class="adult-item"><a href="#">Knee joint, hip joint</a></li>
+              <li class="adult-item"><a href="#">Footsore</a></li>
+              <li class="adult-item"><a href="#">Diseases of the muscles</a></li>
+              <li class="adult-item"><a href="#">Peripheral neurophathy</a></li>
+              <li class="adult-item"><a href="#">Sequelae of stroke</a></li>
+              <li class="adult-item"><a href="#">Traumatic sequelae</a></li>
+            </ul>
+            <h3>Children</h3>
+          </li>
+          <li class="form-book">
+            <h2>Book Schedule</h2>
+            <form action="#" method="post">
+              <input type="text" name="fullname" placeholder="Full Name"><br>
+              <input type="text" name="address" placeholder="Address"><br>
+              <input type="phone" name="phone" placeholder="Phone number"><br>
+              <input type="date" name="time" placeholder="Time"><br>
+              <button type="submit">Send</button>
+            </form>
+          </li>
+        </ul>
+      </aside>
+      <section class="service-content clearfix">
+        <ul class="service-list clearfix">
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img1.jpg" alt="Service Image"></a>
+              <h3><a href="#">Neck shoulder pain</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img2.jpg" alt="Service Image"></a>
+              <h3><a href="#">Neck shoulder pain</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img3.jpg" alt="Service Image"></a>
+              <h3><a href="#">Neck shoulder pain</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img4.jpg" alt="Service Image"></a>
+              <h3><a href="#">Neck shoulder pain</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img5.jpg" alt="Service Image"></a>
+              <h3><a href="#">Slow say</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img6.jpg" alt="Service Image"></a>
+              <h3><a href="#">Slow say</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img7.jpg" alt="Service Image"></a>
+              <h3><a href="#">Slow say</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img8.jpg" alt="Service Image"></a>
+              <h3><a href="#">Neck shoulder pain</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+          <li class="service-item">
+            <div class="border-content">
+              <a href="#"><img src="images/img9.jpg" alt="Service Image"></a>
+              <h3><a href="#">Neck shoulder pain</a></h3>
+              <p>Lorem ipsum dolor sit amet, consectuter adpicising elit sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+              <div class="icon-link clearfix"><a href="#"><img src="images/bottom-right.png"></a></div>
+            </div>
+          </li>
+        </ul>
+      </section>
     </section>
   </main>
   <footer class="page-footer">
-    <div class="footer-info">
-      <ul class="info-list">
-        <h3>About Us</h3>
-        <li class="info-item">General Introduction</li>
-        <li class="info-item">Human</li>
-        <li class="info-item">Facilities And Facilities</li>
-      </ul>
-      <ul class="info-list">
-        <h3>Support</h3>
-        <li class="info-item">Health Counsneling</li>
-        <li class="info-item">Regular Medicine</li>
-        <li class="info-item">Schedule Appointments</li>
-      </ul>
-      <ul class="info-list">
-        <h3>Social Connection</h3>
-        <li class="info-item"><img src="" alt="facebook">Facebook</li>
-        <li class="info-item"><img src="" alt="G+">Google+</li>
-        <li class="info-item"><img src="" alt="youtube">Youtube</li>
-      </ul>
+    <div class="footer-info clearfix">
+      <div class=" vt-center ">
+        <ul class="info-list">
+          <h3>About Us</h3>
+          <li class="info-item">General Introduction</li>
+          <li class="info-item">Human</li>
+          <li class="info-item">Facilities And Facilities</li>
+        </ul>
+        <ul class="info-list">
+          <h3>Support</h3>
+          <li class="info-item">Health Counsneling</li>
+          <li class="info-item">Regular Medicine</li>
+          <li class="info-item">Schedule Appointments</li>
+        </ul>
+        <ul class="info-list">
+          <h3>Social Connection</h3>
+          <li class="info-item none-list-style"><img src="" alt="facebook">Facebook</li>
+          <li class="info-item none-list-style"><img src="" alt="G+">Google+</li>
+          <li class="info-item none-list-style"><img src="" alt="youtube">Youtube</li>
+        </ul>
+      </div>
     </div>
-    <div class="footer-copyright">
-      <p>&copy;2018-Copyright Of Specialized Clinc</p>
+    <div class="footer-copyright ">
+      <div class="vt-center">
+        <p>&copy;2018-Copyright Of Specialized Clinc</p>
+      </div>
     </div>
   </footer>
 </body>
