--- a/test1.html
+++ b/test1.html
@@ -3,30 +3,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
 
   <title>HTML Test </title>
 </head>
 <body>
-  <header class="page-header clearfix">
-    <section class="header-top vt-center clearfix">
-      <div class="page-logo">
-        <a href="#">
-          <img src="images/logo.jpg">
-          <div class="title-logo">
-            <h1>Specialized Clinic</h1>
-            <span>Physiotherapy - Rehabilitatic</span>
-          </div>
-        </a>
-      </div>
-      <div class="contact italic">
-        <img src="images/icon_phone.png">Question for the doctor? <span class="phone">05113941 977</span>
+  <header class="page-header">
+    <section class="header-top">
+      <div class="vt-center">
+        <div class="page-logo">
+          <a href="#">
+            <img src="images/logo.jpg">
+            <div class="title-logo">
+              <h1>Specialized Clinic</h1>
+              <span>Physiotherapy - Rehabilitatic</span>
+            </div>
+          </a>
+        </div>
+        <div class="contact italic">
+          <img src="images/icon_phone.png">Question for the doctor? <span class="phone">05113941 977</span>
+        </div>
       </div>
     </section>  
     <section class="header-bottom clearfix">
-      <div class="vt-center clearfix">
+      <div class="vt-center">
         <nav id="mobile_menu"><img src="images/Menu.png"></nav>
         <nav id="nav_menu" class="nav-menu clearfix">
           <ul class="menu-list clearfix">
@@ -55,7 +57,7 @@
         <li class="breadcrumb-item">Health Service</li>
       </ul>
     </section>
-    <section class="main-content vt-center clearfix">
+    <section class="main-content vt-center">
       <aside class="sidebar-left">
         <ul class="aside-content">
           <li class="category">
@@ -164,7 +166,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="footer-info clearfix">
+    <div class="footer-info">
       <div class=" vt-center ">
         <ul class="info-list">
           <h3>About Us</h3>
